user-charts/admin-lambdastest/templates/network/admin-tt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tt
  labels:
    app: tt
spec:
  type: ClusterIP
  selector:
    app: tt
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
