user-charts/admin-lambdastest/templates/network/admin-tt-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tt
spec:
  parentRefs:
    - name: lambdastest-cilium-gateway
      sectionName: https
      namespace: cilium
  hostnames:
    - "tt.192.168.100.253.sslip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tt
          port: 80
